[gd_scene load_steps=2 format=3 uid="uid://dg2233ephoglo"]

[ext_resource type="Script" path="res://menu/Login.gd" id="1_2mvoa"]

[node name="Login" type="Node2D"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 361.0
offset_bottom = 180.0

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Login" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2mvoa")

[node name="EmailLbl" type="RichTextLabel" parent="Control/Login"]
layout_mode = 0
offset_left = 21.0
offset_top = 35.0
offset_right = 181.0
offset_bottom = 62.0
text = "Email:"

[node name="PassLbl" type="RichTextLabel" parent="Control/Login"]
layout_mode = 0
offset_left = 23.0
offset_top = 73.0
offset_right = 110.0
offset_bottom = 100.0
text = "Password:"

[node name="EmailTxt" type="LineEdit" parent="Control/Login"]
layout_mode = 0
offset_left = 108.0
offset_top = 34.0
offset_right = 349.0
offset_bottom = 65.0

[node name="PassTxt" type="LineEdit" parent="Control/Login"]
layout_mode = 0
offset_left = 109.0
offset_top = 72.0
offset_right = 350.0
offset_bottom = 103.0
secret = true

[node name="ErrorLbl" type="RichTextLabel" parent="Control/Login"]
layout_mode = 0
offset_left = 24.0
offset_top = 104.0
offset_right = 343.0
offset_bottom = 128.0
tab_size = 0

[node name="LoginBtn" type="Button" parent="Control/Login"]
layout_mode = 0
offset_left = 144.0
offset_top = 134.0
offset_right = 221.0
offset_bottom = 165.0
text = "Login"

[connection signal="button_down" from="Control/Login/LoginBtn" to="Control/Login" method="_on_login_btn_button_down"]
[connection signal="button_down" from="Control/Login/LoginBtn" to="Control/Login" method="_on_button_button_down"]
